Fix: ajout du working-directory pour build Node.js

--- a/.github/workflows/deploy-build.yml
+++ b/.github/workflows/deploy-build.yml
@@ -15,9 +15,11 @@ jobs:
 
             - name: Installer les dépendances Node.js
               run: npm ci
+              working-directory: ./
 
             - name: Build des assets
               run: npm run build
+              working-directory: ./
 
             - name: Déployer via SCP
               uses: appleboy/scp-action@v0.1.7
